# metodo_simplex

./: main.py  pyproject.toml  requirements.txt  settings.py  test.py  urls.py
app/views/: manipular.py  maximizar.py  metodo.py  minimizar.py  routers.py  salida.py
templates/: base.html  home.html  problema.html  solucion.html
templates/common/: igualdad.html  objetivo.html  variable.html
